unpackaged/main/default/objects/Exception_Requests__c/Exception_Requests__c.object-meta.xml
<CustomObject>
    <label>Exception Request</label>
    <nameField>
        <displayFormat>ER-{000000}</displayFormat>
        <label>Exception Requests Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Exception Requests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>