unpackaged/main/default/objects/Exception_Requests__c/fields/Approved_Buy_Rate__c.field-meta.xml
<CustomField>
    <fullName>Approved_Buy_Rate__c</fullName>
    <description>Pricing rate approved by credit manager</description>
    <label>Approved Buy Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>