unpackaged/main/default/objects/Exception_Requests__c/fields/Credit_Review__c.field-meta.xml
<CustomField>
    <fullName>Credit_Review__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Credit Review</label>
    <referenceTo>Credit_Review__c</referenceTo>
    <relationshipLabel>Exception Requests</relationshipLabel>
    <relationshipName>Exception_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>