unpackaged/main/default/objects/Exception_Requests__c/fields/Credit_Review_Deal_Type__c.field-meta.xml
<CustomField>
    <fullName>Credit_Review_Deal_Type__c</fullName>
    <formula>Credit_Review__r.Deal_Type__c</formula>
    <label>Credit Review Deal Type</label>
    <type>Text</type>
</CustomField>