unpackaged/main/default/objects/Exception_Requests__c/fields/External_Exception_Request_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Exception_Request_Id__c</fullName>
    <label>External Exception Request Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>