unpackaged/main/default/objects/Exception_Requests__c/fields/Funder__c.field-meta.xml
<CustomField>
    <fullName>Funder__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Funder</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Exception_Requests2</relationshipName>
    <type>Lookup</type>
</CustomField>