unpackaged/main/default/objects/Exception_Requests__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Exception Requests</relationshipLabel>
    <relationshipName>Exception_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>