unpackaged/main/default/objects/Exception_Requests__c/fields/Opportunity_URL__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_URL__c</fullName>
    <formula>HYPERLINK("https://nf.my.salesforce.com/" + Opportunity__c, Opportunity__r.Name)</formula>
    <label>Opportunity URL</label>
    <type>Text</type>
</CustomField>