unpackaged/main/default/objects/Exception_Requests__c/fields/Process_Instance_Work_Item_Id__c.field-meta.xml
<CustomField>
    <fullName>Process_Instance_Work_Item_Id__c</fullName>
    <description>This field will be populated by a flow with the most recent process work item id.</description>
    <inlineHelpText>This is a process field only and should not be modified except by database processes.</inlineHelpText>
    <label>Process Instance Work Item Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>