unpackaged/main/default/objects/Exception_Requests__c/fields/Reassign_Approval_L1__c.field-meta.xml
<CustomField>
    <fullName>Reassign_Approval_L1__c</fullName>
    <formula>HYPERLINK("https://nf.my.salesforce.com/flow/Exception_Request_Reassign?inputExceptionRequestId=" + Id + "&amp;retURL=a4S?fcf=00B34000009BrEO", "Reassign Me", '_self')</formula>
    <label>Reassign Approval L1</label>
    <type>Text</type>
</CustomField>