unpackaged/main/default/objects/Exception_Requests__c/fields/Reassign_Approval_L2__c.field-meta.xml
<CustomField>
    <fullName>Reassign_Approval_L2__c</fullName>
    <formula>HYPERLINK("https://nf.my.salesforce.com/flow/Exception_Request_Reassign_Level_2?inputExceptionRequestId=" + Id + "&amp;retURL=a4S?fcf=00B34000009BrEP", "Reassign Me", '_self')</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reassign Approval L2</label>
    <type>Text</type>
</CustomField>