unpackaged/main/default/objects/Exception_Requests__c/fields/Sales_Manager__c.field-meta.xml
<CustomField>
    <fullName>Sales_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Exception_Requests_Sales_Manager</relationshipName>
    <type>Lookup</type>
</CustomField>