unpackaged/main/default/objects/Exception_Requests__c/fields/Signing_Authority_Analyst_1__c.field-meta.xml
<CustomField>
    <fullName>Signing_Authority_Analyst_1__c</fullName>
    <formula>Analyst__r.WC_Approval_Authority__c</formula>
    <label>Signing Authority Analyst 1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>