unpackaged/main/default/objects/Exception_Requests__c/fields/Submitted_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Submitted_Date_Time__c</fullName>
    <formula>CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Submitted Date/Time</label>
    <type>DateTime</type>
</CustomField>