unpackaged/main/default/objects/Exception_Requests__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Weekly</fullName>
            </value>
            <value>
                <fullName>Longer Term Only</fullName>
            </value>
            <value>
                <fullName>Increase in Funding</fullName>
            </value>
            <value>
                <fullName>Payoff Net Rules</fullName>
            </value>
            <value>
                <fullName>Payoff/Layer</fullName>
            </value>
            <value>
                <fullName>Layer</fullName>
            </value>
            <value>
                <fullName>Request Welcome Call</fullName>
            </value>
            <value>
                <fullName>Longer Term</fullName>
            </value>
            <value>
                <fullName>Early Funding</fullName>
            </value>
            <value>
                <fullName>New Buy Rate</fullName>
            </value>
            <value>
                <fullName>Early Renewal</fullName>
                <isActive>false</isActive>
                <label>Early Renewal</label>
            </value>
            <value>
                <fullName>Other</fullName>
                <isActive>false</isActive>
                <label>Other</label>
            </value>
            <value>
                <fullName>Payoff Only 1 Loan</fullName>
                <isActive>false</isActive>
                <label>Payoff Only 1 Loan</label>
            </value>
            <value>
                <fullName>Self-Site</fullName>
                <isActive>false</isActive>
                <label>Self-Site</label>
            </value>
            <value>
                <fullName>Wire</fullName>
                <isActive>false</isActive>
                <label>Wire</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>