unpackaged/main/default/objects/Exception_Requests__c/fields/X2nd_Analyst__c.field-meta.xml
<CustomField>
    <fullName>X2nd_Analyst__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>2nd Analyst</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Exception_Requests1</relationshipName>
    <type>Lookup</type>
</CustomField>