unpackaged/main/default/objects/Exception_Requests__c/validationRules/Escalate_Exception_Request.validationRule-meta.xml
<ValidationRule>
    <fullName>Escalate_Exception_Request</fullName>
    <active>true</active>
    <errorConditionFormula>AND( 
ISPICKVAL(Status__c, 'Escalated'), 
OR( 
ISBLANK(Manager_Escalation_Reason__c), 
$Setup.ValidationRules__c.Exclude_From_Exception_Request_Val_Rule__c = FALSE)
)</errorConditionFormula>
    <errorMessage>To escalate an Exception Request, you must be on the Sales Leadership team and the Manager Escalation Reason must be populated.</errorMessage>
</ValidationRule>